--- a/iOS/ClassRecommender/CourseSwipeView.xib
+++ b/iOS/ClassRecommender/CourseSwipeView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CourseSwipeView" customModule="ClassRecommender" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CourseSwipeView" customModule="ClassRecommender" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -18,7 +18,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="c54-Io-zaE">
-                    <rect key="frame" x="125" y="298" width="350" height="267"/>
+                    <rect key="frame" x="8" y="298" width="584" height="267"/>
                     <string key="text">A continuation of CSCI 0170. Students learn to program in Java while continuing to develop their algorithmic and analytic skills. Emphasis is placed on object-oriented design, imperative programming, and the implementation and use of data structures. Examples are drawn from such areas as databases, strategy games, web programming, graphical user interfaces, route finding, and data compression. Lab work done with the assistance of TAs. Prerequisite: CSCI 0170.</string>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -30,10 +30,10 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="SSa-38-ynR" firstAttribute="centerX" secondItem="6st-tA-xFS" secondAttribute="centerX" id="3lo-Wa-62K"/>
-                <constraint firstAttribute="trailing" secondItem="c54-Io-zaE" secondAttribute="trailing" constant="125" id="4SF-5O-mz6"/>
+                <constraint firstAttribute="trailing" secondItem="c54-Io-zaE" secondAttribute="trailing" constant="8" id="4SF-5O-mz6"/>
                 <constraint firstItem="SSa-38-ynR" firstAttribute="top" secondItem="6st-tA-xFS" secondAttribute="bottom" constant="50" id="7je-jF-VSj"/>
                 <constraint firstItem="c54-Io-zaE" firstAttribute="centerX" secondItem="SSa-38-ynR" secondAttribute="centerX" id="9Cs-Fb-pae"/>
                 <constraint firstAttribute="bottom" secondItem="c54-Io-zaE" secondAttribute="bottom" constant="35" id="PgS-nh-dbI"/>
@@ -43,7 +43,6 @@
             </constraints>
             <connections>
                 <outlet property="coursedescription" destination="c54-Io-zaE" id="T8P-Cl-JvA"/>
-                <outlet property="description" destination="c54-Io-zaE" id="SvV-Ya-zab"/>
                 <outlet property="name" destination="6st-tA-xFS" id="WgR-0n-hhn"/>
                 <outlet property="title" destination="SSa-38-ynR" id="rbH-7C-KZ0"/>
             </connections>
